--- a/templates/test-result/add.test-result.html
+++ b/templates/test-result/add.test-result.html
@@ -262,14 +262,21 @@
                   </div>
                   <div class="panel-body">
                     <div class="list-space">
-                      <div class="input-group">
+                      <div class="input-group" style="padding-bottom: 10px;">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                         <input class="form-control" type="text" ng-model="testFilter" ng-change="changeTestFilter(testFilter)" placeholder="Search Tests"/>
                       </div>
+                       <div class="btn-group btn-group-justified">
+                        <a class="btn btn-default" ng-class="{'active' : testCodeFilter == 'all'}" ng-click="setTestCodeFilter('all')">Show all</a>
+                        <a class="btn btn-default" ng-class="{'active' : testCodeFilter == 'current'}" ng-click="setTestCodeFilter('current')">Assigned to this Test</a>
+                        <a class="btn btn-default" ng-class="{'active' : testCodeFilter == 'other'}" ng-click="setTestCodeFilter('other')">Assigned to others</a>
+                        <a class="btn btn-default" ng-class="{'active' : testCodeFilter == 'none'}" ng-click="setTestCodeFilter('none')">Unassigned</a>
+                      </div>
                       <ul class="list-items">
                         <li ng-repeat="test in testList | filter: searchTestsFilter">
-                          <label>
-                            <input type="checkbox" ng-click="toggleTestSelection(test)" ng-checked="test.added" /> {{test.name}}
+                          <label ng-class="{greenText: test.added, grayText: test.assigned}">
+                            <input type="checkbox" ng-click="toggleTestSelection(test)" ng-checked="test.added" ng-disabled="test.assigned"  /> {{test.name}}
+                            <span ng-class="{redText: test.assigned}" ng-if="test.assigned"><em> --- Assigned to: {{test.assigned.name_EN}}</em></span>
                           </label>
                         </li>
                       </ul>
@@ -383,7 +390,7 @@
                         Test Group
                       </label>
                       <div class="col-xs-12 col-lg-10">
-                        <input class="form-control" type="text" ng-model="newTestResult.group_EN" ng-change="groupUpdate()" typeahead-on-select="groupUpdate()" uib-typeahead="group for group in TestResultGroups_EN | filter:$viewValue" typeahead-min-length="0" placeholder="English" required="required"> 
+                        <input class="form-control" type="text" ng-model="newTestResult.group_EN" ng-change="groupUpdate(newTestResult.group_EN, 'EN')" typeahead-on-select="groupUpdate(newTestResult.group_EN, 'EN')" uib-typeahead="group.EN as group.EN for group in TestResultGroups | filter:{EN:$viewValue}" typeahead-min-length="0" placeholder="English" required="required"> 
                       </div>
                     </div>  
                   </div>  
@@ -401,7 +408,7 @@
                         Groupe d'Essai
                       </label>
                       <div class="col-xs-12 col-lg-10">
-                        <input class="form-control" type="text" ng-model="newTestResult.group_FR" ng-change="groupUpdate()" typeahead-on-select="groupUpdate()" uib-typeahead="group for group in TestResultGroups_FR | filter:$viewValue" typeahead-min-length="0" placeholder="Francais" required="required"> 
+                        <input class="form-control" type="text" ng-model="newTestResult.group_FR" ng-change="groupUpdate(newTestResult.group_FR, 'FR')" typeahead-on-select="groupUpdate(newTestResult.group_FR, 'FR')" uib-typeahead="group.FR as group.FR for group in TestResultGroups | filter:{FR:$viewValue}" typeahead-min-length="0" placeholder="Francais" required="required"> 
                       </div>
                     </div>    
                   </div>
