--- Educational material are now tagged to specific content types         -- Only educational material tagged to content type in question will show up in list         E.g. Tagging educational material to Appointments will only be a selectable option to attach         material in appointments
    --- Added hyperlinks to selected educational material on edit pages
        -- When selecting an educational material, you can now click on the text to view the material in another tab

    --- Can now unattach educational material from radio button

--- a/templates/alias/add.alias.html
+++ b/templates/alias/add.alias.html
@@ -482,7 +482,7 @@
                             <ul class="list-items">
                               <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
                                 <label>
-                                  <input type="radio" ng-model="newAlias.eduMat" ng-change="eduMatUpdate()" ng-value="eduMat" /> {{eduMat.name_EN}}
+                                  <input type="radio" ng-model="newAlias.eduMatSer" ng-click="eduMatUpdate($event, eduMat)" value="{{eduMat.serial}}" /> {{eduMat.name_EN}}
                                 </label>
                               </li>
                             </ul>
