--- a/templates/diagnosis/add.diagnosis-translation.html
+++ b/templates/diagnosis/add.diagnosis-translation.html
@@ -405,7 +405,7 @@
 													<ul class="list-items">
 														<li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
 															<label>
-																<input type="radio" ng-model="newDiagnosisTranslation.eduMat" ng-change="eduMatUpdate()" ng-value="eduMat" /> {{eduMat.name_EN}}
+																<input type="radio" ng-model="newDiagnosisTranslation.eduMatSer" ng-click="eduMatUpdate($event, eduMat)" value="{{eduMat.serial}}" /> {{eduMat.name_EN}}
 															</label>
 														</li>
 													</ul>
