--- a/templates/diagnosis/edit.diagnosis-translation.html
+++ b/templates/diagnosis/edit.diagnosis-translation.html
@@ -116,32 +116,50 @@
 
 			<!-- SECTION: Educational material -->
 			<div uib-accordion-group is-open="educationalMaterialSection.open">
-          <uib-accordion-heading>
-            <div>
-              <strong>Attached Educational Material</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': educationalMaterialSection.open, 'glyphicon-chevron-right': !educationalMaterialSection.open}"></i>
-            </div>
-          </uib-accordion-heading>
-          <div class="alert alert-info" role="alert">
-            <strong>Current Educational Material (EN / FR)</strong><br>
-            <p>
+        <uib-accordion-heading>
+          <div>
+            <strong>Attached Educational Material</strong> <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': educationalMaterialSection.open, 'glyphicon-chevron-right': !educationalMaterialSection.open}"></i>
+          </div>
+        </uib-accordion-heading>
+        <div class="alert alert-info" role="alert">
+          <strong>Current Educational Material (EN / FR)</strong><br>
+          <p>
+          	<div>
               <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-              <span ng-if="diagnosisTranslation.eduMat">{{diagnosisTranslation.eduMat.name_EN}} / {{diagnosisTranslation.eduMat.name_FR}}</span>
+              <span ng-if="diagnosisTranslation.eduMat">
+              	<span ng-if="diagnosisTranslation.eduMat.tocs.length">
+              		<span style="cursor: pointer" ng-click="toggleTOCDisplay()">
+              			<strong>{{diagnosisTranslation.eduMat.name_EN}} / {{diagnosisTranslation.eduMat.name_FR}}</strong>
+              		</span>
+              		<ul ng-if="showTOCs">
+              			<li ng-repeat="toc in diagnosisTranslation.eduMat.tocs">
+              				<strong><a target="_blank" href="{{toc.url_EN}}">{{toc.name_EN}}</a></strong> / <strong><a target="_blank" href="{{toc.url_FR}}">{{toc.name_FR}}</a></strong>
+              			</li>
+              		</ul>
+              	</span>
+              	<span ng-if="!diagnosisTranslation.eduMat.tocs.length">
+              		<span>
+	              		<strong><a target="_blank" href="{{diagnosisTranslation.eduMat.url_EN}}">{{diagnosisTranslation.eduMat.name_EN}}</a> / <a target="_blank" href="{{diagnosisTranslation.eduMat.url_FR}}">{{diagnosisTranslation.eduMat.name_FR}}</a></strong>
+	              	</span>
+              	</span>
+              </span>
               <span ng-if="!diagnosisTranslation.eduMat">None</span>
-            </p>
-          </div>
-          <div class="list-space">
-            <div class="input-group">
-              <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-              <input class="form-control" type="text" ng-model="eduMatFilter" ng-change="changeEduMatFilter(eduMatFilter)" placeholder="Search Educational Material..."/>
             </div>
-            <ul class="list-items">
-              <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
-                <label>
-                  <input type="radio" ng-model="diagnosisTranslation.eduMatSer" ng-change="eduMatUpdate(eduMat)" ng-checked="diagnosisTranslation.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
-                </label>
-              </li>
-            </ul>
-          </div>
+          </p>
         </div>
-      </uib-accordion>
-    </div>
+        <div class="list-space">
+          <div class="input-group">
+            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+            <input class="form-control" type="text" ng-model="eduMatFilter" ng-change="changeEduMatFilter(eduMatFilter)" placeholder="Search Educational Material..."/>
+          </div>
+          <ul class="list-items">
+            <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
+              <label>
+                <input type="radio" ng-model="diagnosisTranslation.eduMatSer" ng-click="eduMatUpdate($event, eduMat)" value="{{eduMat.serial}}" /> {{eduMat.name_EN}}
+              </label>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </uib-accordion>
+  </div>
