--- a/templates/test-result/edit.test-result.html
+++ b/templates/test-result/edit.test-result.html
@@ -141,9 +141,27 @@
       <div class="alert alert-info" role="alert">
         <strong>Current Educational Material (EN / FR)</strong><br>
         <p>
-          <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-          <span ng-if="testResult.eduMat">{{testResult.eduMat.name_EN}} / {{testResult.eduMat.name_FR}}</span>
-          <span ng-if="!testResult.eduMat">None</span>
+          <div>
+            <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+            <span ng-if="testResult.eduMat">
+              <span ng-if="testResult.eduMat.tocs.length">
+                <span style="cursor: pointer" ng-click="toggleTOCDisplay()">
+                  <strong>{{testResult.eduMat.name_EN}} / {{testResult.eduMat.name_FR}}</strong>
+                </span>
+                <ul ng-if="showTOCs">
+                  <li ng-repeat="toc in testResult.eduMat.tocs">
+                    <strong><a target="_blank" href="{{toc.url_EN}}">{{toc.name_EN}}</a></strong> / <strong><a target="_blank" href="{{toc.url_FR}}">{{toc.name_FR}}</a></strong>
+                  </li>
+                </ul>
+              </span>
+              <span ng-if="!testResult.eduMat.tocs.length">
+                <span>
+                  <strong><a target="_blank" href="{{testResult.eduMat.url_EN}}">{{testResult.eduMat.name_EN}}</a> / <a target="_blank" href="{{testResult.eduMat.url_FR}}">{{testResult.eduMat.name_FR}}</a></strong>
+                </span>
+              </span>
+            </span>
+            <span ng-if="!testResult.eduMat">None</span>
+          </div>
         </p>
       </div>
       <div class="list-space">
@@ -154,7 +172,7 @@
         <ul class="list-items">
           <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
             <label>
-              <input type="radio" ng-model="testResult.eduMatSer" ng-change="eduMatUpdate(eduMat)" ng-checked="testResult.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
+              <input type="radio" ng-model="testResult.eduMatSer" ng-click="eduMatUpdate($event, eduMat)" value="{{eduMat.serial}}" /> {{eduMat.name_EN}}
             </label>
           </li>
         </ul>
