--- a/templates/post/edit.post.html
+++ b/templates/post/edit.post.html
@@ -28,13 +28,13 @@
         <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
           <div class="input-group">
             <span class="input-group-addon">EN</span>
-            <input class="form-control" type="text" ng-model="post.name_EN" ng-change="setChangesMade()" placeholder="English Title" required="required">
+            <input class="form-control" type="text" ng-model="post.name_EN" ng-change="detailsUpdated()" placeholder="English Title" required="required">
           </div>
         </div>
         <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
           <div class="input-group">
             <span class="input-group-addon">FR</span>
-            <input class="form-control" type="text" ng-model="post.name_FR" ng-change="setChangesMade()" placeholder="Titre Français" required="required">
+            <input class="form-control" type="text" ng-model="post.name_FR" ng-change="detailsUpdated()" placeholder="Titre Français" required="required">
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
             <span style="font-size:20px;">HTML (English)</span>
           </div>
           <div class="form-group">
-            <div text-angular ng-model="post.body_EN" ng-change="setChangesMade()"></div>
+            <div text-angular ng-model="post.body_EN" ng-change="detailsUpdated()"></div>
           </div>
         </div>
         <div class="col-xs-12 col-lg-4">
@@ -74,7 +74,7 @@
             <span style="font-size:20px;">HTML (Français) </span>
           </div>
           <div class="form-group">
-            <div text-angular ng-model="post.body_FR" ng-change="setChangesMade()"></div>
+            <div text-angular ng-model="post.body_FR" ng-change="detailsUpdated()"></div>
           </div>
         </div>
         <div class="col-xs-12 col-lg-4">
@@ -108,7 +108,7 @@
       <div class="row">
         <div class="col-xs-12 col-sm-7 col-lg-6" style="padding-top: 10px;margin-bottom: 20px;">
           <p class="input-group">
-            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="post.publish_date" is-open="popup.opened" min="minDate" ng-change="setChangesMade()" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+            <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="post.publish_date" is-open="popup.opened" min="minDate" ng-change="detailsUpdated()" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
             <span class="input-group-btn">
               <button class="btn btn-default" ng-click="open()"><i class="glyphicon glyphicon-calendar"></i></button>
             </span>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-xs-12 col-sm-5 col-lg-6" style="margin-top: -24px;">
           <div>
-            <div uib-timepicker ng-change="setChangesMade()" ng-model="post.publish_time" minute-step="5" show-meridian="false"></div>
+            <div uib-timepicker ng-change="detailsUpdated()" ng-model="post.publish_time" minute-step="5" show-meridian="false"></div>
           </div>
         </div>
       </div>
